app/assets/stylesheets/style.css
/* Allgemeine Styles */
body {
  margin: 0;
  padding: 0;
  font-family: Arial, sans-serif;
  background-color: #ff9800;
}

a {
  text-decoration: none;
  color: #333;
}

.button1 {
  background-color: black;
  color: #ff9800;
}

.button1:hover {
  color: #f1a559f3;
}

.dynamicball1 {
  width: 17.8125rem;
  height: 17.8125rem;
  flex-shrink: 0;
  border-radius: 285px;
  background: #000;
  z-index: 1;
  margin-left: 75rem;
  margin-top: -4rem;
}

.navbar {
  background-color: #ff9800;
  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2);
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 10px 20px;
}
.container {
  width: 100%;
  max-width: 1200px; /* Adjust the maximum width as needed */
  padding: 0 20px;
  margin: 0 auto;
}

.navbar-logo a {
  font-weight: bold;
  font-size: 24px;
  color: #333;
  text-decoration: none;
}

.navbar-links {
  display: flex;
  align-items: center;
  margin-left: auto;
}

.navbar-profile {
  display: flex;
  align-items: center;
  gap: 10px;
  justify-items: center;
  justify-content: center;
}

.navbar-profile a,
.navbar-profile button {
  background-color: transparent;
  color: #333;
  border: none;
  font-weight: bold;
  font-size: 16px;
  padding: 10px 20px;
  cursor: pointer;
  transition: color 0.3s;
  text-decoration: none;
  margin-bottom: 0px;
}
.nav-menu-divider {
  border-right: 2px solid black;
  height: 100%;
  margin: 0 8px;
}

.navbar-profile button:hover,
.navbar-profile a:hover {
  color: #ff9800;
  background-color: black;
}

/*
ul.nav-menu{
  padding-left: 500px;
}*/
.dropdown {
  position: absolute;
  font-style: normal;
  font-weight: 700;
  font-size: 20px;
  line-height: 24px;
  color: #000000;
}

.dropbtn {
  display: flex;
  align-items: center;
  background-color: transparent;
  color: #ff9800;
  border: none;
  font-weight: bold;
  font-size: 16px;
  cursor: pointer;
  transition: color 0.3s;
}

.dropdown:hover {
  background-color: #ff9800;
}

.dropdown-content :hover {
  background-color: #ff9800;
}

.dropdown-content a {
  display: block;
  padding: 10px 15px;
  color: #ff9800;
  text-decoration: none;
}

.dropdown-content a:hover {
  background-color: #ff9800;
  color: black;
}

.dropdown:hover {
  background-color: #ff9800;
}

.dropdown:hover .dropdown-content {
  display: block;
  min-width: 0;
  background-color: #ff9800;
}

.dropdown-content:hover .dropdown-content a {
  background-color: black;
  color: #ff9800;
}

.dashboard-link a {
  display: inline-block;
  background-color: transparent;
  font-weight: bold;
  color: #ff9800;
  padding: 10px 20px;
  border-radius: 5px;
  text-decoration: none;
  transition: background-color 0.3s;
}

.dashboard-link a:hover {
  color: #ffb649;
  background-color: black;
}

/* Kategorien */

h1 {
  font-size: 36px;
  margin-bottom: 30px;
}

/*.categories {
    display: flex;
    flex-wrap: wrap;
    gap: 15px;
}*/

.category {
  background-color: #eee;
  order: 3;
  border-radius: 5px;
  padding: 15px;
  width: calc(33.33% - 50px);
  text-align: center;
}

.category a {
  font-size: 24px;
  font-weight: bold;
  display: block;
}

/* Footer */
footer {
  background-color: black;
  padding: 2rem;
  display: absolute;
  justify-content: center;
  align-items: center;
  font-weight: bold;
  height: fit-content;
}

.footer-center {
  display: flex;
  gap: 20px;
  justify-content: center;
  flex-wrap: wrap; /* Erlaubt das Umbruch der Links */
}

.footer-center a {
  margin-bottom: 0.5rem; /* Fügt Abstand zwischen den Links hinzu */
}
.colortext {
  color: #ff9800;
}
/* Media Query für mobile Geräte */
@media screen and (max-width: 768px) {
  body {
    display: flex;
    margin: 0;
    padding: 0;
    font-family: Arial, sans-serif;
    background-color: #ff9800;
    height: 100vh;
  }
  .footer {
    background-color: black;
    padding: 2rem;
    display: flex;
    font-weight: bold;
    height: auto;
    position: fixed;
    height: 100%;
  }

  .flex-wrap {
    flex-wrap: nowrap; /* Deaktiviert das Umbruchverhalten */
  }
}

@media (max-width: 767px) {
  footer {
    flex-direction: row;
    align-items: flex-start;
  }
}
.dropbtn {
  display: inline-block;
  background-color: #333;
  color: #fff;
  padding: 10px 20px;
  border-radius: 5px;
  font-size: 16px;
}

.dropdown {
  position: relative;
  display: inline-block;
}

.dropdown-content {
  display: none;
  position: absolute;
  min-width: 140px;
  z-index: 1;
}

.dropdown-content a {
  color: black;
  text-decoration: none;
  display: absolute;
}

.dropdown-content a:hover {
  background-color: black;
  color: #ff9800;
  border-radius: 2px;
  width: 81px;
  display: absolute;
}

.dropdown:hover .dropdown-content {
  display: block;
  width: 81px;
}

.preview-image {
  display: block;
  max-width: 100%;
  height: auto;
  border-radius: 0.375rem; /* Adjust the border radius as desired */
}

@keyframes blink {
  0% {
    opacity: 0;
  }
  50% {
    opacity: 1;
  }
  100% {
    opacity: 0;
  }
}

.blinking {
  display: inline-block;
  width: 10px;
  height: 10px;
  border-radius: 50%;
  animation: blink 2s infinite;
}

.blinking.active {
  background-color: green;
}

.blinking.deactivated {
  background-color: red;
}
.deactivated-image {
  filter: grayscale(100%);
  opacity: 0.6;
}
li {
  list-style: none;
}

.hamburger {
  display: none;
}
.bar {
  display: block;
  width: 25px;
  height: 3px;
  margin: 5px auto;
  -webkit-transition: all 0.3s ease-in-out;
  transition: all 0.3s ease-in-out;
  background-color: #101010;
}

.nav-item {
  display: flex;
  align-items: center;
  justify-content: center;
}
/*
.nav-menu {
  display: flex;
  justify-content: space-around;
  padding: 1.25rem;
  flex-wrap: wrap;
  z-index: 1;
}*/
.nav-menu {
  display: flex;
  justify-content: flex-end;
  flex-grow: 1;
}

@media only screen and (max-width: 768px) {
  .nav-menu {
    position: absolute;
    left: -100%;
    top: 5rem;
    flex-direction: column;
    background-color: #ff9800;
    width: 100%;
    text-align: center;
    transition: transform 0.8s ease;
    transform: translateX(-100%);
    overflow-y: hidden;
  }
  .nav-menu .bar1 {
    display: none;
  }

  .body-darken {
    background-color: rgba(0, 0, 0, 0.6);
  }

  .nav-menu.active {
    transform: translateX(100%);
    transition: transform 0.8s ease;
  }

  .nav-item {
    margin: 1.5rem 0;
    color: #ff9800;
    align-self: flex-start;
  }

  .hamburger {
    display: block;
    cursor: pointer;
    margin-left: auto;
  }
  .hamburger.active .bar:nth-child(2) {
    opacity: 0;
  }

  .hamburger.active .bar:nth-child(1) {
    transform: translateY(8px) rotate(45deg);
  }

  .hamburger.active .bar:nth-child(3) {
    transform: translateY(-8px) rotate(-45deg);
  }
}

@keyframes zoom {
  0% {
    transform: scale(1);
  }
  50% {
    transform: scale(1.18);
  }
  100% {
    transform: scale(1);
  }
}

.zoom-animation {
  animation: zoom 5s ease-in-out infinite;
}
.zoom-animation1 {
  animation: zoom 9s ease-in-out infinite;
}

.logo {
  position: absolute;
  width: 20px;
  height: 20px;
  left: 188px;
  top: 23px;
  mix-blend-mode: hard-light;
  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
}

.bottom-button {
  display: block;
  position: fixed;
  bottom: 5rem;
  left: 50%;
  transform: translateX(-50%);
  padding: 1rem 2rem;
  background-color: black;
  color: #ff9800;
  font-weight: bold;
  text-decoration: none;
  border-radius: 0.5rem;
  transition: background-color 0.3s;
}

.bottom-button:hover {
  background-color: #333;
  color: #ffb649;
}

.wrapper1 {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  gap: 3rem;
  margin-top: 5rem;
}

.layout1 {
  margin-right: 0;
  margin-bottom: 2rem;
}

.layout2 {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  gap: 2rem;
}

.card1 {
  margin-top: 2rem;
  margin-bottom: 5rem;
  display: flex;
  width: 100%;
  max-width: 20rem;
  height: 15rem;
  padding: 1.5rem 1rem;
  flex-direction: column;
  align-items: center;
  gap: 1rem;
  flex-shrink: 0;
  border-radius: 1.25rem;
  border: 1px solid #000;
  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
}
.titel1 {
  color: #000;
  font-size: 1.25rem;
  font-family: Montserrat;
  font-style: normal;
  font-weight: 800;
  line-height: normal;
  letter-spacing: 0.125rem;
  text-transform: uppercase;
  font-size: 2rem;
  margin-bottom: 8rem;
}
.titel2 {
  color: #000;
  font-size: 1.25rem;
  font-family: Montserrat;
  font-style: normal;
  font-weight: 700;
  line-height: normal;
  letter-spacing: 0.125rem;
  text-transform: uppercase;
}

.text1,
.text2 {
  display: flex;
  width: 100%;
  flex-direction: column;
  flex: 1 0 0;
  color: #000;
  font-size: 1.125rem;
  font-family: Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue";
  font-style: normal;
  font-weight: 400;
  line-height: normal;
}

/* Responsive styles */
@media (max-width: 640px) {

  .bottom-button {
    display: block;
    position: fixed;
    bottom: 2rem;
    left: 50%;
    transform: translateX(-50%);
    padding: 1rem 2rem;
    background-color: black;
    color: #ff9800;
    font-weight: bold;
    text-decoration: none;
    border-radius: 0.5rem;
    transition: background-color 0.3s;
  }

  .bottom-button:hover {
    background-color: #333;
    color: #ffb649;
  }

  .wrapper1 {
    gap: 0.2rem;
  }

  .layout1 {
    margin-right: 0;
    margin-bottom: 1rem;
  }

  .layout2 {
    flex-direction: column;
    gap: 1rem;
  }

  .card1 {
    max-width: 30rem;
    max-height: 20rem;
    gap: 4px;
  }

  .card1:last-child {
    margin-bottom: 5rem;
  }
}
.flip-card {
  width: 240px;
  height: 240px;
  perspective: 1000px;
}

.flip-card-inner {
  width: 100%;
  height: 100%;
  transition: transform 0.5s;
  transform-style: preserve-3d;
}

.flip-card:hover .flip-card-inner {
  transform: rotateY(180deg);
}

.flip-card-front,
.flip-card-back {
  position: absolute;
  width: 100%;
  height: 100%;
  backface-visibility: hidden;
}

.flip-card-front {
  /* Front card styles */
}

.flip-card-back {
  /* Back card styles */
  transform: rotateY(180deg);
}

.show-details-button,
.hide-details-button {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  padding: 12px 24px;
  font-size: 16px;
  background-color: #007bff;
  color: #fff;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  transition: background-color 0.3s ease;
}

.show-details-button:hover,
.hide-details-button:hover {
  background-color: #0056b3;
}

.product-description {
  height: 120px;
  overflow: hidden;
  text-overflow: ellipsis;
}

.like-button {
  display: inline-block;
  position: relative;
  cursor: pointer;
}

.like-icon {
  display: inline-block;
  transition: transform 0.2s ease-in-out;
}

.like-label {
  display: inline-block;
  margin-left: 0.5rem;
  transition: color 0.2s ease-in-out;
}

.liked-text {
  display: none;
  color: black;
  font-size: 0.8rem;
  margin-left: 0.5rem;
  transition: opacity 0.2s ease-in-out;
}

.like-button input[type="checkbox"] {
  display: none;
}

.like-button input[type="checkbox"]:checked ~ .like-icon {
  transform: scale(2);
}

.like-button input[type="checkbox"]:checked ~ .like-label {
  color: #ff0000;
}

.like-button input[type="checkbox"]:checked ~ .liked-text {
  display: inline-block;
  opacity: 1;
}

